src/test/ui/regions/regions-close-object-into-object-4.stderr
error: cannot infer an appropriate lifetime
  --> $DIR/regions-close-object-into-object-4.rs:10:11
   |
LL | fn i<'a, T, U>(v: Box<dyn A<U>+'a>) -> Box<dyn X + 'static> {
   |                   ---------------- this data with lifetime `'a`...
LL |     box B(&*v) as Box<dyn X>
   |           ^^^ ...is captured here...
   |
note: ...and required to be `'static` by this
  --> $DIR/regions-close-object-into-object-4.rs:10:5
   |
LL |     box B(&*v) as Box<dyn X>
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
help: consider changing the trait object's explicit `'static` bound to lifetime `'a`
   |
LL | fn i<'a, T, U>(v: Box<dyn A<U>+'a>) -> Box<dyn X + 'a> {
   |                                                    ^^
help: alternatively, set an explicit `'static` lifetime in this parameter
   |
LL | fn i<'a, T, U>(v: std::boxed::Box<(dyn A<U> + 'static)>) -> Box<dyn X + 'static> {
   |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

